--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MenuGo"
         tools:targetApi="31">
         <activity
+            android:name=".FootList"
+            android:exported="false" />
+        <activity
             android:name=".Home"
             android:exported="false"
             android:label="@string/title_activity_home"
