--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     // Add the Google services Gradle plugin
     id 'com.google.gms.google-services'
-
 }
 
 android {
@@ -39,6 +38,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics'
 
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.+'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -54,6 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.1'
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.+'
