--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.+'
     //noinspection GradleCompatible
