--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics'
 
-
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:26.+'
     implementation 'androidx.appcompat:appcompat:1.6.1'
