--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics'
 
+
+    implementation 'io.paperdb:paperdb:2.1'
+    implementation 'com.github.rey5137:material:1.2.4'
     implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:26.+'
