--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
 
     implementation 'io.paperdb:paperdb:2.1'
+    implementation 'com.stepstone.apprating:app-rating:2.0.0'
     implementation 'com.github.rey5137:material:1.2.4'
     implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
     //noinspection GradleCompatible
