--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.MenuGo"
         tools:replace="android:theme"
         tools:targetApi="31">
+        <service
+            android:name=".ListenOrder"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".OrderStatus"
             android:exported="false" />
