--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'com.github.andremion:counterfab:1.0.1'
 
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
 
     implementation 'io.paperdb:paperdb:2.1'
     implementation 'com.stepstone.apprating:app-rating:2.0.0'
