--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
 
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+
     implementation 'io.paperdb:paperdb:2.1'
     implementation 'com.stepstone.apprating:app-rating:2.0.0'
     implementation 'com.github.rey5137:material:1.2.4'
